# HSErank

./: .gitignore  .gitmodules  README.md
backend/: CMakeLists.txt  Dockerfile  Makefile
backend/dblpservice/src/: dynamic_config.json  main.cpp  static_config.yaml  xml_dblp.h
backend/gatewayservice/src/: main.cpp  static_config.yaml
backend/userver/core/: CTestTestfile.cmake  Makefile  build_config.hpp  cmake_install.cmake
backend/userver/grpc/: CTestTestfile.cmake  Makefile  cmake_install.cmake
backend/userver/postgresql/: CTestTestfile.cmake  Makefile  cmake_install.cmake
backend/userver/universal/: CTestTestfile.cmake  Makefile  cmake_install.cmake
frontend/: index.html  journals.json  main.js  style.css
